--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jose-manuel-developer-web",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -35,5 +35,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.5"
+  },
+  "engines": {
+    "node": ">=20.17.0"
   }
 }
